--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-image: url(images/back.png);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: multiply;
+    opacity: 0.9;
 }
 
 
